# jacquard-lang

./: .gitignore  .ocamlformat  .tool-versions  AGENTS.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  NOTICE  README.md  RUNTIME-EXCEPTION.md  TRADEMARKS.md  dune-project  jacquard.opam  weft.opam
.github/: pull_request_template.md
bench/: avl.jqd  enum.jqd  fib.jqd  mutate.jqd  pure.jqd  sort.jqd  state-loop.jqd  sum.jqd  text.jqd
corpus/: README.md
demos/: README.md  agent-dream.jac  agent-dream.jqd  agent-dream.sh  agent-dream.wft  ambiguity-pipeline.jac  ambiguity-pipeline.jqd  ambiguity-pipeline.sh  ambiguity-pipeline.wft  clarifying-question.jac  clarifying-question.jqd  clarifying-question.sh  clarifying-question.wft  cookbook.jqd  cookbook.wft  escrow  m1-choose.jac  m1-choose.jqd  m1-choose.wft  m1-fact.jac  m1-fact.jqd  m1-fact.wft  m1-gated.jac  m1-gated.jqd  m1-gated.wft  m1.sh  m3-two-coins.jac  m3-two-coins.jqd  m3-two-coins.wft  m3.sh  m4-hostile.jqd  m4-hostile.sh  m4-hostile.wft  repair-warp-tests.jqd  repair-warp-tests.wft  repair.jac  repair.jqd  repair.sh  repair.wft  showcase-warp-tests.jqd  (+9 more)
docs/: README.md  SKILL.md  ast.md  benchmarks.md  ci-cd.md  client-playground.md  concurrency.md  development-plan.md  effect-linearity.md  effect-membranes.md  effect-review.md  effect-taxonomy.md  errors.md  example-code.md  native-compilation.md  native-intrinsics.md  native-parallel-decision.md  stdlib.md  (+7 more)
runtime/: build_lib.sh  check.sh  dune  jq_alloc.c  jq_apply.c  jq_code.c  jq_effects.c  jq_error.c  jq_frames.c  jq_grants.c  jq_intrinsics.c  jq_main.c  jq_rc.c  jq_rng.c  jq_show.c  jq_text.c  jq_utf8.c  jq_value.h
runtime/test/: test_parity.c  test_runtime.c
test/: corpus_support.ml  dune  eval_support.ml  gen_diag_goldens.ml  gen_freeze_goldens.ml  gen_goldens.ml  gen_governance_playground_fixtures.ml  gen_native_parity.ml  gen_once_hostile.ml  gen_prelude_goldens.ml  gen_sig_goldens.ml  gen_surface_twins.ml  governance_review_diff_focused.ml  native-eligibility.txt  native_fuzz.ml  once_interpreter_probe.ml  round_robin_trace.ml  scope_policy_trace.ml  test_approval.ml  test_audit.ml  test_audit_chain.ml  test_cancellation.ml  test_canon.ml  test_channel_contract.ml  test_check.ml  test_corpus.ml  test_depth_guards.ml  test_diag.ml  test_diags.ml  test_diff.ml  test_dist_lib.ml  test_dx_parser_recovery.ml  test_effect_taxonomy.ml  test_errors_doc.ml  test_eval.ml  test_exhaust.ml  test_exhaustive_schedule.ml  test_export.ml  test_fmt.ml  test_form.ml  (+70 more)
test/api-boundary/: dune  public-api.t
test/cli/: approval-handlers.t  case-studies.t  check.t  concurrency-evidence.t  demos.t  diagnostics.t  diff.t  dist.t  dune  escrow.t  export.t  gm21-posterior.t  governance-check.t  governance-explain-approved-v1.jqd  governance-explain-denied-v1.jqd  governance-explain.t  governance-fault-laws.jqd  governance-gate-dry-laws.jqd  governance-policy-laws.jqd  governance-reconciliation-gap-v1.jqd  governance-reconciliation-v1.jqd  governance-reconciliation.t  governance-replay.t  governance-run-bundle-v1.jqd  governance-run-bundle.t  governance-verifier.t  governed-membranes-release.t  governed-workspace.t  hash.t  hostile-demo.t  infer.t  manifest.t  native-effects.t  native-leaks.t  native.t  preflight.t  props.t  repair.t  round-robin.t  run.t  (+18 more)
test/docs-doctest/: README.md  docs_doctest.ml  dune
test/docs-doctest/fixtures/: concurrency-channel-contract.jac  concurrency-channel-contract.stdout  concurrency-channel-type-mismatch.jac  concurrency-channel-type-mismatch.stderr  concurrency-row-contract.jac  concurrency-row-contract.stdout  concurrency-row-laundering.jac  concurrency-row-laundering.stderr  effect-taxonomy-schemas.jac  governed-membrane-signatures.jac  governed-membrane-signatures.stdout  readme-multishot.jac  stdlib-control-effects.jac  stdlib-core-declarations.jac  stdlib-dist-declarations.jac  stdlib-handler-policy.jac  stdlib-handler-policy.stdout  stdlib-multi-effect-signature.stdout  stdlib-nested-tuple-destructure.jac  stdlib-pipe-transformation.jac  stdlib-pipe-transformation.stdout  stdlib-text-join.jac  stdlib-text-join.stdout  tutorial-bool-match.jac  tutorial-bool-match.stdout  tutorial-identity.stdout  tutorial-nonexhaustive.jac  tutorial-nonexhaustive.stderr  tutorial-read-only.jac  tutorial-read-only.stdout  tutorial-safe-div.jac  tutorial-safe-div.stdout  warp-check-effect.jac  warp-fault-effect.jac  warp-hermetic-case.jac  warp-hermetic-case.stdout  warp-test-types.jac
test/gauntlet/: checker-effects.t  dune  eval-capabilities.t  formatter-diff.t  hashing.t
test/gm12b/: dune
test/native-asan/: join-bad-early.jqd  join-bad-first-class.jqd  join-bad-last.jqd  join-bad-middle.jqd
test/native-gauntlet/: MAPPING.md  e02-erasure-type-error.jqd  e03-erasure-arity.jqd  e04-erasure-match-failure.jqd  e05-code-form-bad-head.jqd  e06-erasure-splice-not-code.jqd  e07-erasure-text-join.jqd  g01-choose-tuple.jqd  g02-thrice.jqd  g03-deep-inner-count.jqd  g04-state-run.jqd  g05-abort-short-circuit.jqd  g06-deep-second-perform.jqd  g07-forwarding.jqd  g08-nearest-wins.jqd  g09-ret-transforms.jqd  g10-ret-per-resumption.jqd  g11-unhandled-names.jqd  g12-unhandled-past-other.jqd  g13-clause-escapes-outward.jqd  g14-op-as-value.jqd  g15-four-leaves.jqd  g16-nested-shadowing.jqd  g17-ret-outside-region.jqd  g18-abort-skips-pending.jqd  g19-escaped-resume.jqd  g20-throw-either.jqd  g21-conditional-resume.jqd  g22-enum-m3.jqd  g23-fault-random.jqd  g24-dst.jqd  g25-chain-order.jqd  g26-lw-m3.jqd  g27-lw-under-handler.jqd  g28-lw-nested.jqd  g29-lw-soft.jqd  g30-deep-mutual-tail.jqd  g31-repair-pure.jqd  g32-code-ops.jqd  g33-quote-effectful-splice.jqd  (+8 more)
test/native-parallel/: bench-hint.jqd  bench-sequential.jqd  fail-both.jqd  fail-map.jqd  success.jqd
test/readability/: dune  fixture-manifest.json  model-prompt.txt  readability_benchmark.py  result.schema.json
test/readability/fixtures/: authority-escalation.jqd  authority-escalation.py  predict-output.jac  predict-output.jqd  predict-output.py  seeded-bug.jac  seeded-bug.jqd  seeded-bug.py
(+551 files in other folders)
