(library
 (name corpus_support)
 (modules corpus_support)
 (libraries jacquard unix))

(executable
 (name gen_goldens)
 (modules gen_goldens)
 (libraries jacquard corpus_support))

(executable
 (name gen_surface_twins)
 (modules gen_surface_twins)
 (libraries jacquard corpus_support))

(executable
 (name gen_prelude_goldens)
 (modules gen_prelude_goldens)
 (libraries jacquard unix))

(executable
 (name gen_sig_goldens)
 (modules gen_sig_goldens)
 (libraries jacquard corpus_support))

(executable
 (name gen_diag_goldens)
 (modules gen_diag_goldens)
 (libraries jacquard corpus_support))

(executable
 (name gen_freeze_goldens)
 (modules gen_freeze_goldens)
 (libraries jacquard corpus_support))

(executable
 (name gen_native_parity)
 (modules gen_native_parity)
 (libraries jacquard unix))

(executable
 (name native_fuzz)
 (modules native_fuzz)
 (libraries unix))

(executable
 (name once_interpreter_probe)
 (modules once_interpreter_probe)
 (libraries jacquard unix))

(executable
 (name gen_once_hostile)
 (modules gen_once_hostile)
 (libraries jacquard unix))

; the fuzz lane (task 74): seeded random pure programs through both engines.
; Not in the default runtest — run `dune build @native-fuzz` (1000 cases) or
; the executable directly with a count for the 10k pre-merge sweep.
(rule
 (alias native-fuzz)
 (deps
  native_fuzz.exe
  %{bin:jacquard}
  (source_tree ../prelude)
  (source_tree ../runtime))
 (action
  (setenv JACQUARD %{bin:jacquard}
   (setenv JACQUARD_PRELUDE ../prelude
    (setenv JACQUARD_RUNTIME ../runtime
     (setenv CC clang
      (run ./native_fuzz.exe 1000)))))))

(test
 (name test_jacquard)
 (modules
  (:standard \ corpus_support gen_goldens gen_surface_twins gen_prelude_goldens gen_sig_goldens gen_diag_goldens gen_freeze_goldens gen_native_parity native_fuzz once_interpreter_probe gen_once_hostile))
 (libraries jacquard corpus_support alcotest fmt qcheck-core qcheck-alcotest unix str)
 (deps
  (glob_files_rec ../corpus/*.jqd)
  (glob_files_rec ../corpus/*.jac)
  (source_tree ../corpus/valid)
  (source_tree ../corpus/surface)
  ../corpus/governance/malformed-operation-names.tsv
  ../corpus/governance/unresolved-operations.tsv
  (glob_files_rec ../corpus/*.expect)
  (glob_files_rec ../corpus/*.golden)
  (glob_files_rec ../prelude/*.jqd)
  ../prelude/operation-modes.manifest
  ../prelude/rings.manifest
  (glob_files ../src/*.ml)
  (glob_files ../bin/*.ml)
  ../docs/errors.md
  ../docs/effect-membranes.md
  ../docs/effect-taxonomy.md
  ../docs/README.md
  ../docs/release/surface-syntax/DECISION.md
  ../docs/release/surface-syntax/FOLLOWUPS.md
  ../docs/release/surface-syntax/MANIFEST.sha256
  ../docs/release/governed-membranes/GM1-EVIDENCE.md
  ../docs/release/governed-membranes/GM1-MANIFEST.sha256
  ../docs/release/governed-membranes/GM2-EVIDENCE.md
  ../docs/release/governed-membranes/GM2-MANIFEST.sha256
  ../docs/release/governed-membranes/GM3-EVIDENCE.md
  ../docs/release/governed-membranes/GM3-MANIFEST.sha256
  ../docs/release/governed-membranes/GM5-EVIDENCE.md
  ../docs/release/governed-membranes/GM5-MANIFEST.sha256
  ../docs/release/governed-membranes/GM6-EVIDENCE.md
  ../docs/release/governed-membranes/GM6-MANIFEST.sha256
  ../docs/release/dx-jac-export/EVIDENCE.md
  ../docs/stdlib.md
  ../docs/surface-syntax.md
  ../docs/tutorial.md
  ../docs/warp-testing.md
  ../spec/effect-taxonomy-v1.tsv
  docs-doctest/fixtures/effect-taxonomy-schemas.jac
  docs-doctest/fixtures/governed-membrane-signatures.jac
  docs-doctest/fixtures/governed-membrane-signatures.stdout
  docs-doctest/fixtures/stdlib-handler-policy.jac
  ../scripts/release/check-surface-syntax-manifest.sh
  cli/escrow.t))
