(cram
 (deps
  %{bin:jacquard}
  %{bin:jac}
  governance-policy-laws.jqd
  governance-run-bundle-v1.jqd
  governance-reconciliation-v1.jqd
  governance-reconciliation-gap-v1.jqd
  governance-explain-approved-v1.jqd
  governance-explain-denied-v1.jqd
  governance-fault-laws.jqd
  (source_tree ../../prelude)
  (source_tree ../../demos)
  (source_tree ../../corpus)
  (source_tree ../../runtime)
  ../../README.md
  ../../docs/README.md
  ../../docs/ci-cd.md
  ../../docs/client-playground.md
  ../../docs/effect-membranes.md
  ../../docs/errors.md
  ../../docs/release/dx-jac-export/EVIDENCE.md
  ../../docs/release/structured-concurrency/EVIDENCE.md
  (source_tree ../../playground/governance)
  ../../src/governance_decision_chain.ml
  ../../src/governance_decision_chain.mli
  ../../src/host_readiness.ml
  ../../src/host_readiness.mli
  ../../src/scheduler_core.ml
  ../../src/scheduler_core.mli
  ../../src/scope_policy.ml
  ../../src/structured_scope.ml
  ../dune
  ../gen_governance_playground_fixtures.ml
  ../test_governance_decision_chain.ml
  ../test_governance_explain.ml
  ../test_host_readiness.ml
  ../test_scheduler_core.ml
  dune
  governed-membranes-release.t
  (source_tree ../../docs/release/governed-membranes)
  (source_tree ../../bench)
  (source_tree ../native-asan)
  (source_tree ../native-gauntlet)
  ../once_interpreter_probe.exe
  ../gen_once_hostile.exe
  ../test_jacquard.exe
  ../scope_policy_trace.exe
  ../round_robin_trace.exe
  ../../demos/concurrency/concurrency_evidence.exe
  ../../demos/governed-workspace/live_evidence.exe
  (source_tree ../native-parallel)
  (source_tree ../../scripts)
  governance-gate-dry-laws.jqd
  workspace-dry-run-laws.jqd))

; The 50,000-case GM.12B proof is mandatory in its own CI lane, but intentionally
; excluded from runtest so the ordinary development loop remains responsive.
(rule
 (alias gm12b-evidence)
 (deps
  %{bin:jac}
  workspace-forward-laws.jqd
  workspace-forward-laws.expected
  ../../scripts/release/check-gm12b-exhaustive.sh
  (source_tree ../../prelude))
 (action
  (run ../../scripts/release/check-gm12b-exhaustive.sh
   %{bin:jac}
   workspace-forward-laws.jqd
   workspace-forward-laws.expected
   ../../prelude)))
