(cram
 (deps
  %{bin:jacquard}
  %{bin:jac}
  governance-policy-laws.jqd
  governance-run-bundle-v1.jqd
  governance-reconciliation-v1.jqd
  governance-reconciliation-gap-v1.jqd
  governance-explain-approved-v1.jqd
  governance-explain-denied-v1.jqd
  governance-fault-laws.jqd
  (source_tree ../../prelude)
  (source_tree ../../demos)
  (source_tree ../../corpus)
  (source_tree ../../runtime)
  ../../README.md
  ../../docs/README.md
  ../../docs/ci-cd.md
  ../../docs/client-playground.md
  ../../docs/concurrency.md
  ../../docs/effect-membranes.md
  ../../docs/errors.md
  ../../docs/SKILL.md
  ../../docs/stdlib.md
  ../../docs/warp-testing.md
  ../../docs/release/dx-jac-export/EVIDENCE.md
  (source_tree ../../docs/release/structured-concurrency)
  (source_tree ../../playground/governance)
  ../../src/governance_decision_chain.ml
  ../../src/governance_decision_chain.mli
  ../../src/host_readiness.ml
  ../../src/host_readiness.mli
  ../../src/infer_dist.ml
  ../../src/posterior_risk.ml
  ../../src/posterior_risk.mli
  ../../src/posterior_risk_verify.ml
  ../../src/posterior_risk_verify.mli
  ../../src/prelude.ml
  ../../src/round_robin.ml
  ../../src/warp.ml
  ../../src/scheduler_core.ml
  ../../src/scheduler_core.mli
  ../../src/scope_policy.ml
  ../../src/structured_scope.ml
  ../dune
  ../gen_governance_playground_fixtures.ml
  ../test_governance_decision_chain.ml
  ../test_governance_explain.ml
  ../test_effect_taxonomy.ml
  ../test_host_readiness.ml
  ../test_infer.ml
  ../test_jacquard.ml
  ../test_cancellation.ml
  ../test_posterior_risk.ml
  ../test_posterior_risk_verify.ml
  ../test_scheduler_core.ml
  ../test_warp.ml
  ../gm12b/dune
  dune
  gm21-posterior.t
  governed-membranes-release.t
  tiers.t
  (source_tree ../../docs/release/governed-membranes)
  (source_tree ../../bench)
  (source_tree ../native-asan)
  (source_tree ../native-gauntlet)
  ../once_interpreter_probe.exe
  ../gen_once_hostile.exe
  ../test_jacquard.exe
  ../scope_policy_trace.exe
  ../round_robin_trace.exe
  concurrency-evidence.t
  ../../demos/concurrency/concurrency_evidence.exe
  ../../demos/governed-workspace/live_evidence.exe
  (source_tree ../native-parallel)
  (source_tree ../../scripts)
  governance-gate-dry-laws.jqd
  workspace-dry-run-laws.jqd))

; Keep exact historical evidence commands runnable while the proof implementation
; remains isolated in test/gm12b/dune.
(alias
 (name gm12b-evidence)
 (deps (alias ../gm12b/gm12b-evidence)))
